--- a/index.html
+++ b/index.html
@@ -3,85 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ALLOSH RAIN GOLD V45 👑</title>
+    <title>ALLOSH SUPREME V46 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
-        :root { --gold: #ffd700; --bg: #000; --card: rgba(255, 255, 255, 0.05); }
+        :root { --gold: #ffd700; --bg: #000; --panel: rgba(10, 10, 15, 0.98); }
         * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; transition: 0.3s; }
         
         body { background: var(--bg); color: white; overflow: hidden; height: 100vh; position: fixed; width: 100%; }
 
-        /* نافذة اليوتيوب المربعة */
-        #yt-win { position: fixed; top: 75px; left: 10px; width: 170px; background: #000; border: 2px solid var(--gold); border-radius: 12px; z-index: 5000; display: none; overflow: hidden; }
-        .win-bar { background: var(--gold); color: #000; padding: 4px 10px; display: flex; justify-content: space-between; font-size: 10px; font-weight: 900; }
-
         /* الهيدر */
         .header { height: 65px; background: #050505; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 2000; }
-        .infinity-gold { color: var(--gold); font-size: 14px; font-weight: 900; background: #111; padding: 5px 12px; border-radius: 20px; border: 1px solid #333; }
+        .gold-label { color: var(--gold); background: #111; padding: 4px 10px; border-radius: 20px; font-size: 13px; border: 1px solid #222; }
 
-        /* القائمة اليسرى */
-        .side-l { position: fixed; top: 0; bottom: 0; left: -290px; width: 280px; background: rgba(8,8,12,0.98); z-index: 4000; backdrop-filter: blur(15px); border-right: 2px solid var(--gold); overflow-y: auto; }
-        .side-l.active { left: 0 !important; }
+        /* القوائم الجانبية (تم إصلاح اليمين واليسار) */
+        .side { position: fixed; top: 0; bottom: 0; width: 280px; background: var(--panel); z-index: 4000; backdrop-filter: blur(15px); }
+        #side-r { right: -285px; border-left: 1px solid var(--gold); }
+        #side-l { left: -285px; border-right: 1px solid var(--gold); overflow-y: auto; }
+        .side.active { right: 0 !important; left: 0 !important; }
 
         /* صناديق الميزات */
-        .box { background: var(--card); border: 1px solid #222; border-radius: 15px; margin: 15px 10px; padding: 15px; border-left: 3px solid var(--gold); }
-        .box-h { color: var(--gold); font-size: 12px; border-bottom: 1px solid #333; margin-bottom: 10px; padding-bottom: 5px; text-align: center; }
-        .btn-king { width: 100%; padding: 12px; border-radius: 10px; border: none; background: linear-gradient(45deg, #ffd700, #b8860b); color: #000; font-weight: 900; cursor: pointer; font-size: 12px; }
+        .box { background: rgba(255,255,255,0.03); border: 1px solid #222; border-radius: 12px; margin: 10px; padding: 15px; }
+        .box-h { color: var(--gold); font-size: 12px; text-align: center; border-bottom: 1px solid #333; margin-bottom: 10px; }
+        .btn-play { width: 100%; padding: 10px; background: var(--gold); color: black; border: none; border-radius: 8px; font-weight: 900; cursor: pointer; margin-top: 5px; }
 
         /* الشات */
-        #chat-area { position: absolute; top: 65px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 15px; }
-        .msg { display: flex; gap: 10px; align-items: flex-end; animation: slideUp 0.3s; }
-        @keyframes slideUp { from { opacity: 0; transform: translateY(10px); } }
-        .pfp { width: 42px; height: 42px; border-radius: 10px; border: 2px solid var(--gold); }
-        .bubble { background: rgba(255,255,255,0.06); padding: 10px; border-radius: 15px; max-width: 80%; border: 1px solid #222; }
-        .gold-tag { font-size: 8px; color: var(--gold); margin-top: 4px; display: block; opacity: 0.8; }
+        #chat-scroller { position: absolute; top: 65px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; }
+        .msg { display: flex; gap: 10px; align-items: flex-end; animation: slide 0.3s; }
+        @keyframes slide { from { opacity: 0; transform: translateY(10px); } }
+        .pfp { width: 40px; height: 40px; border-radius: 8px; border: 1px solid var(--gold); }
+        .bubble { background: rgba(255,255,255,0.05); padding: 10px; border-radius: 15px; max-width: 80%; border: 1px solid #1a1a1a; position: relative; }
 
+        /* البار السفلي */
         .footer { position: fixed; bottom: 0; width: 100%; height: 85px; background: #000; border-top: 1px solid #111; display: flex; align-items: center; padding: 0 10px; gap: 8px; }
         #msg-in { flex: 1; height: 45px; background: #0d0d0d; border: 1px solid #222; border-radius: 10px; color: #fff; padding: 0 12px; }
     </style>
 </head>
 <body>
 
-<div id="yt-win">
-    <div class="win-bar"><span>YOUTUBE</span><button onclick="document.getElementById('yt-win').style.display='none'" style="border:none; background:none; font-weight:900;">X</button></div>
-    <div id="yt-player"></div>
-</div>
-
 <div class="header">
-    <button onclick="document.getElementById('side-l').classList.toggle('active')" style="background:none; border:none; font-size:24px;">⚙️</button>
-    <div style="text-align:center"><b style="color:var(--gold)">ALLOSH RAIN V45</b><br><span class="infinity-gold">💰 ∞ غير محدود</span></div>
-    <div style="width:40px;"></div>
+    <button onclick="toggleSide('side-l')" style="background:none; border:none; font-size:24px;">⚙️</button>
+    <div style="text-align:center"><b style="color:var(--gold)">ALLOSH KING V46</b><br><span class="gold-label">💰 رصيدك: ∞</span></div>
+    <button onclick="toggleSide('side-r')" style="background:none; border:none; font-size:24px;">👥</button>
 </div>
 
-<div id="side-l" class="side-l">
-    <div style="text-align:center; padding:25px;">
-        <img id="me-pfp" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" style="width:70px; border-radius:12px; border:2px solid var(--gold); cursor:pointer;" onclick="document.getElementById('f').click()">
-        <input type="file" id="f" hidden onchange="updateP(this)">
-        <h3 style="margin-top:10px; color:var(--gold);">علوش الإمبراطور 👑</h3>
+<div id="side-r" class="side">
+    <h3 style="padding:20px; color:var(--gold); border-bottom:1px solid #222;">👥 الراداد الملكي</h3>
+    <div id="online-users" style="padding:15px;"></div>
+</div>
+
+<div id="side-l" class="side">
+    <div style="text-align:center; padding:20px;">
+        <img id="me-pfp" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" style="width:70px; border-radius:10px; border:2px solid var(--gold); cursor:pointer;" onclick="document.getElementById('f').click()">
+        <input type="file" id="f" hidden onchange="updateMe(this)">
+        <h3 id="me-name" style="margin-top:10px; color:var(--gold);">الإمبراطور علوش 👑</h3>
     </div>
 
     <div class="box">
-        <div class="box-h">⛈️ توزيع مكرمة ملكية</div>
-        <button class="btn-king" onclick="rainGold()">توزيع 1000💰 على الجميع</button>
-        <p style="font-size:9px; color:#666; text-align:center; margin-top:8px;">سوف تظهر رسالة للجميع بأنك وزعت الذهب</p>
+        <div class="box-h">🎰 طاولة الرهان الملكي</div>
+        <input type="number" id="bet-amount" placeholder="المبلغ المراد المراهنة به" style="width:100%; background:#111; border:1px solid #333; color:white; padding:8px; border-radius:5px; margin-bottom:5px;">
+        <button class="btn-play" onclick="betNow()">ابدأ الرهان 🔥</button>
+        <p style="font-size:9px; color:gray; margin-top:5px; text-align:center;">فرصة الربح 50% - الضعف أو الخسارة</p>
     </div>
 
     <div class="box">
-        <div class="box-h">🛒 متجر الإمبراطور</div>
-        <button class="btn-king" style="background:#333; color:var(--gold);" onclick="buy('color','#00f2ff')">اسم أزرق نيون</button>
-        <button class="btn-king" style="background:#333; color:var(--gold); margin-top:5px;" onclick="buy('title','القائد الأعلى')">لقب القائد</button>
+        <div class="box-h">💎 مكرمة ملكية</div>
+        <button class="btn-play" style="background:#333; color:var(--gold);" onclick="rainGold()">توزيع 5000💰 على الجميع</button>
     </div>
 
-    <button onclick="document.getElementById('side-l').classList.remove('active')" style="width:90%; margin:5%; padding:10px; background:red; color:white; border:none; border-radius:10px; font-weight:900;">إغلاق</button>
+    <button onclick="toggleSide('side-l')" style="width:90%; margin:5%; padding:10px; background:red; border:none; color:white; border-radius:10px; font-weight:900;">إغلاق</button>
 </div>
 
-<div id="chat-area"></div>
+<div id="chat-scroller"></div>
 
 <div class="footer">
-    <input type="text" id="msg-in" placeholder="أمرك مطاع..." onkeypress="if(event.key==='Enter') push()">
-    <button onclick="push()" style="background:var(--gold); border:none; padding:10px 20px; border-radius:10px; font-weight:900;">إرسال</button>
+    <button onclick="toggleSide('side-l')" style="background:none; border:none; font-size:22px;">🎲</button>
+    <input type="text" id="msg-in" placeholder="أمرك مطاع يا صاحب الجلالة..." onkeypress="if(event.key==='Enter') push()">
+    <button onclick="push()" style="background:var(--gold); border:none; padding:10px 18px; border-radius:10px; font-weight:900;">إرسال</button>
 </div>
 
 <script>
@@ -91,51 +90,65 @@
 
     let me = { 
         name: "علوش", avatar: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png",
-        gold: 9999999, // رصيدك لا نهائي
+        gold: 99999999,
         color: localStorage.getItem('c') || '#ffd700',
-        title: localStorage.getItem('t') || 'الإمبراطور'
+        title: "الإمبراطور"
     };
 
-    // ميزة توزيع الذهب على الجميع
-    function rainGold() {
-        db.ref('rain_v45').push({ u: "نظام", t: "📢 الإمبراطور علوش وزع مكرمة 1000 ذهبة لكل الحاضرين! 🎉", a: "https://cdn-icons-png.flaticon.com/512/2489/2489756.png", c: "#ffd700", title: "مكرمة" });
-        // ملاحظة: في النسخ الحقيقية، يتم التحديث في حسابات المستخدمين الآخرين عبر Firebase.
-        alert("تم توزيع الذهب على الجميع بنجاح! 💰⛈️");
+    function toggleSide(id) {
+        document.querySelectorAll('.side').forEach(s => { if(s.id !== id) s.classList.remove('active'); });
+        document.getElementById(id).classList.toggle('active');
     }
 
-    function buy(type, val) {
-        if(type === 'color') { me.color = val; localStorage.setItem('c', val); }
-        else { me.title = val; localStorage.setItem('t', val); }
-        alert("تم التفعيل يا ملك!");
+    // لعبة الرهان الجديدة
+    function betNow() {
+        let amt = parseInt(document.getElementById('bet-amount').value);
+        if(!amt || amt <= 0) return alert("حدد مبلغ الرهان أولاً!");
+        
+        let win = Math.random() > 0.5;
+        if(win) {
+            let profit = amt * 2;
+            alert("مبروك! ربحت " + profit + " ذهبة! 🎉");
+            db.ref('supreme_v46').push({ u: "👑 الإمبراطور", t: "لقد راهنت بـ " + amt + " وربحت الضعف! 🔥", a: me.avatar, c: me.color });
+        } else {
+            alert("خسرت الرهان! حاول مرة أخرى.");
+        }
+    }
+
+    function rainGold() {
+        db.ref('supreme_v46').push({ u: "النظام", t: "📢 الإمبراطور علوش وزع 5000 ذهبة لكل الرعية! ⛈️💰", a: "https://cdn-icons-png.flaticon.com/512/2489/2489756.png", c: "#ffd700" });
     }
 
     function push() {
         let i = document.getElementById('msg-in'); if(!i.value) return;
-        db.ref('rain_v45').push({ u: me.name, t: i.value, a: me.avatar, c: me.color, title: me.title, g: "∞" });
+        db.ref('supreme_v46').push({ u: me.name, t: i.value, a: me.avatar, c: me.color, title: me.title, g: "∞" });
         i.value = "";
     }
 
-    db.ref('rain_v45').limitToLast(30).on('child_added', s => {
+    // المتصلون
+    db.ref('online_v46/'+me.name).set(true);
+    db.ref('online_v46/'+me.name).onDisconnect().remove();
+    db.ref('online_v46').on('value', s => {
+        let l = document.getElementById('online-users'); l.innerHTML = "";
+        s.forEach(u => { l.innerHTML += `<div style="padding:10px; border-bottom:1px solid #111;">👑 ${u.key}</div>`; });
+    });
+
+    // جلب الرسائل
+    db.ref('supreme_v46').limitToLast(30).on('child_added', s => {
         let d = s.val();
-        let ytID = d.t.match(/^.*(youtu.be\/|v\/|u\/\w\/|embed\/|watch\?v=|\&v=)([^#\&\?]*).*/);
-        if(ytID) {
-            document.getElementById('yt-win').style.display = 'block';
-            document.getElementById('yt-player').innerHTML = `<iframe width="100%" height="130" src="https://www.youtube.com/embed/${ytID[2]}" frameborder="0" allowfullscreen></iframe>`;
-        }
-        let area = document.getElementById('chat-area');
+        let area = document.getElementById('chat-scroller');
         let div = document.createElement('div');
         div.className = "msg";
         div.innerHTML = `<img src="${d.a}" class="pfp">
             <div class="bubble">
-                <span style="font-size:9px; color:var(--gold)">[${d.title}]</span> <b style="color:${d.c}; font-size:11px;">${d.u}</b><br>
+                <b style="color:${d.c}; font-size:11px;">${d.u}</b><br>
                 <span>${d.t}</span>
-                <span class="gold-tag">💰 رصيده: ${d.g}</span>
             </div>`;
         area.appendChild(div);
         area.scrollTop = area.scrollHeight;
     });
 
-    function updateP(input) {
+    function updateMe(input) {
         if(input.files[0]) {
             let r = new FileReader();
             r.onload = e => { me.avatar = e.target.result; document.getElementById('me-pfp').src = e.target.result; };
